# src/controllers/review.controller.ts
@@ -1,8 +1,9 @@
-import { Controller, Route, Tags, Get, Path, Post, Body, Patch } from 'tsoa'
+import { Controller, Route, Tags, Get, Path, Post, Body, Patch, Delete } from 'tsoa'
 import { ReviewDTO } from '../dto/review.dto'
 import { reviewService } from '../services/review.service'
 import { notFound } from '../error/NotFoundError'
 import { gameService } from '../services/game.service'
+import { Review } from '../models/review.model'
 
 @Route('reviews')
 @Tags('Reviews')
@@ -28,7 +29,7 @@ export class ReviewController extends Controller {
   ): Promise<ReviewDTO> {
     const { game, rating, review_text } = requestBody
     const game_id = game?.id
-    if (!game_id) throw new Error('null et kotlin >')
+    if (!game_id) throw notFound("Game with id : " + game_id)
     return reviewService.createReview(game_id, rating, review_text)
   }
 
@@ -43,5 +44,12 @@ export class ReviewController extends Controller {
     const { game, rating, review_text } = requestBody
 
     return reviewService.updateReview(id, game?.id, rating, review_text)
+  }
+
+  @Delete("{id}")
+  public async deleteReview(id: number): Promise<void> {
+    const review = await Review.findByPk(id);
+    if(!review) notFound("Review with id " + id);
+    review.destroy;
   }
 }
